--- a/portal/templates/signin.html
+++ b/portal/templates/signin.html
@@ -37,7 +37,10 @@
               </div>
           </div>
       </form>
+
+      <a href="/portal/search">Project search for guests</a>
     </div>
+    <br><br><br><br><br>
     Use "guide" as username and password
 </body>
 </html>
