--- a/portal/templates/guide/projectsManagement.html
+++ b/portal/templates/guide/projectsManagement.html
@@ -41,14 +41,14 @@
             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-            	<li><a href="/portal/guides/"><i class="material-icons left">list</i>Guides</a></li>
+            	<li><a href="/portal/profile/"><i class="material-icons left">list</i>My profile</a></li>
                 <li><a href="/portal/students/"><i class="material-icons left">list</i>Students</a></li>
                 <li class="active"><a href="/portal/projects/"><i class="material-icons left">list</i>Projects</a></li>
                 <li><a href="/portal/signout/"><i class="material-icons left">perm_identity</i>Logout</a></li>
             </ul>
 
             <ul class="side-nav" id="mobile-demo">
-            	<li><a href="/portal/guides/"><i class="material-icons left">list</i>Guides</a></li>
+            	<li><a href="/portal/profile/"><i class="material-icons left">list</i>My profile</a></li>
                 <li><a href="/portal/students/"><i class="material-icons left">list</i>Students</a></li>
                 <li class="active"><a href="/portal/projects/"><i class="material-icons left">list</i>Projects</a></li>
                 <li><a href="/portal/signout/"><i class="material-icons left">perm_identity</i>Logout</a></li>
