--- a/portal/templates/signin.html
+++ b/portal/templates/signin.html
@@ -36,8 +36,14 @@
                   <input type="submit" class="waves-effect waves-light btn blue" value="Sign in">
               </div>
           </div>
+          <div class="row">
+          	<div class="input-field col s12 center">
+                  <a href="/portal/password_reset/">Forgot password</a>
+              </div>
+          </div>
       </form>
-
+      <br>
+      
       <a href="/portal/search">Project search for guests</a>
     </div>
     <br><br><br><br><br>
